fix z-index

--- a/www/css/main.styl
+++ b/www/css/main.styl
@@ -236,6 +236,7 @@ Global elements
 /**LEFT SIDE**/
 .left-side
   absolute top 300px left 10%
+  z-index 2
   clearfix()
 .logo
   display block
@@ -336,6 +337,7 @@ Global elements
 /**RIGHT SIDE**/
 .right-side
   absolute top 300px right 15%
+  z-index 2
 .partners
   li
     margin 20px 0 0 0
